更新Neo4j客户端以支持数据库参数，重构索引和约束创建逻辑，新增根据别名获取论文的功能；调整配置文件中的超时设置，优化核心论文服务的缓存策略，支持从全视图裁剪引用和参考文献；完善文档以反映设计补充和数据模型的变化。

--- a/docs/数据模型设计.md
+++ b/docs/数据模型设计.md
@@ -1,7 +1,7 @@
 初版的数据模型要尽量简洁，因为将结构化的S2 api 返回值解析成图结构再还原需要不小的工程量，因此后续再进行升级。
 
-初版数据模型分为三个部分
-1. 假名：doi/title/arxivid/paperid 等
+初版数据模型分为三个部分(三种节点)
+1. 假名节点：doi/title/arxivid/paperid 等
 2. 文献核心节点：(paperId&title) ，仅这两个字段，title是为了方便debug
 3. 文献数据节点：(metadata, citations, references) ，这三个节点组合起来即完整的 S2 Api 返回
 
